# RSS_ring_ppml

./: .gitignore  3pc_ml_runner.sh  3pc_runner.sh  5pc_ml_runner.sh  5pc_runner.sh  7pc_runner.sh  CMakeLists.txt  Dockerfile  README.md  eda_rb_optimizations.txt  eda_rb_pregen.sh  licenser.sh  micro_runner.sh  ml_runner.sh  run_cmds.txt  runtime-config  runtime-config-3  runtime-config-5  runtime-config-7  runtime-config-lake-3  shared_vars_30_7pc_LAN.sh  shared_vars_30_7pc_WAN.sh  shared_vars_30_LAN.sh  shared_vars_30_WAN.sh  shared_vars_60_7pc_LAN.sh  shared_vars_60_7pc_WAN.sh  shared_vars_60_LAN.sh  shared_vars_60_WAN.sh  ssh_keygen.sh  tc.txt
include/: 3pc_all.h  5pc_all.h  7pc_all.h  EQZ.h  LT.h  LT_5pc.h  MSB.h  MSB_5pc.h  MSB_7pc.h  Mult.h  Mult_5pc.h  Mult_7pc.h  NodeConfiguration.h  NodeNetwork.h  Open.h  Open_5pc.h  Open_7pc.h  Trunc.h  Trunc_5pc.h  aes_ni.h  b2a.h  b2a_5pc.h  benchmark_3pc.h  benchmark_5pc.h  benchmark_7pc.h  bitAdd.h  bitAddTrunc.h  bitAddTrunc_5pc.h  bitAdd_5pc.h  bitAdd_7pc.h  bitLT.h  bitLT_5pc.h  bitLT_7pc.h  config_params.h  convert.h  convert_5pc.h  edaBit.h  edaBit_5pc.h  edaBit_7pc.h  eda_rb_pregen_3pc.h  (+24 more)
include_30/: setringsize.h
include_60/: setringsize.h
latency/: Makefile  Makefile~  client.c  connection.h  server.c
src/: main.cpp
src/benchmarks/: benchmark_3pc.cpp  benchmark_5pc.cpp  benchmark_7pc.cpp  eda_rb_pregen_3pc.cpp  eda_rb_pregen_5pc.cpp  minionn.cpp  minionn_5pc.cpp  q_mobilenet.cpp  q_mobilenet_5pc.cpp  test_protocols_3pc.cpp
src/connection/: NodeConfiguration.cpp  NodeNetwork.cpp
src/protocols_basic/: Mult.cpp  Mult_5pc.cpp  Mult_7pc.cpp  Open.cpp  Open_5pc.cpp  Open_7pc.cpp  matMult.cpp  matMult_5pc.cpp  matMult_7pc.cpp
src/protocols_composite/: EQZ.cpp  LT.cpp  LT_5pc.cpp  MSB.cpp  MSB_5pc.cpp  MSB_7pc.cpp  Trunc.cpp  Trunc_5pc.cpp  b2a.cpp  b2a_5pc.cpp  bitAdd.cpp  bitAddTrunc.cpp  bitAddTrunc_5pc.cpp  bitAdd_5pc.cpp  bitAdd_7pc.cpp  bitLT.cpp  bitLT_5pc.cpp  bitLT_7pc.cpp  convert.cpp  convert_5pc.cpp
src/protocols_ml/: neural_ops.cpp  neural_ops_5pc.cpp  nn_layers.cpp  nn_layers_5pc.cpp  svm_ops.cpp  svm_ops_5pc.cpp
src/protocols_rand/: edaBit.cpp  edaBit_5pc.cpp  edaBit_7pc.cpp  randBit.cpp  randBit_5pc.cpp  randBit_7pc.cpp
src/utilities/: aes_ni.c  config_params.cpp  init_io.cpp  init_io_5pc.cpp  mpc_util.cpp  output_io.cpp
